Add personal blind quality calibration
